--- a/EAM_3/index.html
+++ b/EAM_3/index.html
@@ -31,6 +31,10 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css">
+    <script src="http://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
+
     <!-- Modernizer for Portfolio -->
     <script src="js/modernizer.js"></script>
 
@@ -114,13 +118,13 @@
                                 <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
                                     <input type="text" name="last_name1" id="last_name1" class="form-control" placeholder="Προς">
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="email" name="email1" id="email1" class="form-control" placeholder="Your Email">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <h4 style="margin-top:5px"><i class="fa fa-clock-o global-radius"></i> ΦΕΥΓΩ: <i><a href="/">όρισε ώρα</a></i></h4>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="phone1" id="phone1" class="form-control" placeholder="Your Phone">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <h4><i class="fa fa-cogs global-radius"></i> <i><a href="/">Προτιμήσεις</a></i></h4>
                                 </div>
-                                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 text-center">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-offset-12 text-center">
                                     <button type="submit" value="SEND" id="submit1" class="btn btn-light btn-radius btn-brd grd1 btn-block">Πάμε!</button>
                                 </div>
                             </fieldset>
@@ -137,7 +141,7 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
-	
+
 	<div class="about-box">
 		<div class="container">
 			<div class="row">
