--- a/EAM_3/index.html
+++ b/EAM_3/index.html
@@ -80,24 +80,36 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a class="active" href="index.html">Αρχική</a></li>
                         <li><a href="#">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
-                        <li><a href="#">Εισιτήρια-Κάρτες</a></li>
-                        <li><a href="#">Προσβασιμότητα</a></li>
-                        <li class="dropdown">
-                            <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+                        <li class="dropdown" >
+                            <a href="https://github.com/wmsksf/hci" class="dropbtn">Εισιτήρια-Κάρτες</a>
                             <div class="dropdown-content">
-                                <a href="https://www.google.gr/">Link 1</a>
-                                <a href="https://stackoverflow.com/questions/37199574/drop-down-menu-from-existing-navbar">Link 2</a>
-                                <a href="#">Link 3</a>
+                                <a href="https://www.google.gr/">Σημεία Έκδοσης/Επαναφόρτισης</a>
+                                <a href="#">Τιμές Εισιτηρίων</a>
+                                <a href="#">Online Αγορά Εισιτηρίων</a>
                             </div>
-                        </li>    
+                        </li>
+                        <li class="dropdown" >
+                            <a href="#" class="dropbtn">Προσβασιμότητα</a>
+                            <div class="dropdown-content">
+                                <a href="#">Σημεία Πρόσβασης</a>
+                                <a href="#">Ανακοινώσεις</a>
+                            </div>
+                        </li> 
+                        <li class="dropdown" >
+                            <a href="#" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
+                            <div class="dropdown-content">
+                                <a href="#">Νέα-Ανακοινώσεις</a>
+                                <a href="#">Προφίλ Οργανισμού</a>
+                            </div>
+                        </li>   
                         <li><a href="contact.html">Επικοινωνία</a></li>
 						<li class="search-option">
 							<button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
 							<form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
-								<input type="text" placeholder="Search....">
+								<input type="text" placeholder="Αναζήτηση...">
 								<button class="p-color-bg"><i class="fa fa-search" aria-hidden="true"></i></button>
 							</form>
                        </li> 
@@ -109,17 +121,17 @@
                                             <button data-dismiss="modal" class="close">&times;</button>
                                             <ul class="nav nav-tabs" role="tablist">
                                                 <li role="presentation" class="active">
-                                                    <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Log In</a>
+                                                    <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Σύνδεση</a>
                                                 </li>
-                                                <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Sign In</a>
+                                                <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Εγγραφή</a>
                                                 </li>
                                             </ul>
                                             <div class="tab-content">
                                                 <div role="tabpanel" class="tab-pane active" id="home">
                                                     <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Username"/>
-                                                        <input type="password" name="password" class="password form-control" placeholder="password"/>
-                                                        <input class="btn login" type="submit" value="Login" />
+                                                        <input type="text" name="username" class="username form-control" placeholder="Όνομα Χρήστη"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                        <input class="btn login" type="submit" value="Είσοδος" />
                                                     </form>
                                                 </div>
                                                 <div role="tabpanel" class="tab-pane" id="next">
@@ -240,7 +252,8 @@
             </div><!-- end row -->
             <div class="row">
                 <div class="col-md-3 col-md-offset-9 wow slideInRight hidden-xs hidden-sm">
-                        <a data-scroll href="#" class="btn btn-light btn-radius grd1 btn-brd">Ανακαλύψτε την Αθήνα</a>
+                    <button class="btnn" onclick="window.open('#', '_blank')">Ανακαλύψτε την Αθήνα</button>
+                        <!-- <a data-scroll href="#" class="btnn">Ανακαλύψτε την Αθήνα</a> -->
                     </div>
                 </div>
             </div>
